general_deployment/wrk-ali-temp2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrk
spec:
  selector:
    matchLabels:
      app: wrk
  replicas: 1
  template:
    metadata:
      labels:
        app: wrk
    spec:
      nodeSelector:
        node: worker2
      containers:
      - name: wrk
        image: weny017/wrk
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 2000m
            memory: 1024Mi
        volumeMounts:
        - name: wrk-volume
          mountPath: /var/local/wrk
      volumes:
      - name: wrk-volume
        hostPath:
          path: /var/local/wrk
          type: DirectoryOrCreate
      restartPolicy: Always
