general_deployment/wrk-with-tcpdump.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrk
spec:
  selector:
    matchLabels:
      app: wrk
  template:
    metadata:
      labels:
        app: wrk
    spec:
      containers:
      - name: wrk
        image: weny017/wrk:latest
        imagePullPolicy: IfNotPresent
      - name: sniff
        image: addozhang/static-dump
        imagePullPolicy: IfNotPresent
        command: ['sleep', '3600']
