general_deployment/nginx-tls.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nginx-gtw
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: httpbin-credential
    hosts:
    - "*"
  - port:
      number: 80
      name: http
      protocol: HTTP
    host:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginxvs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gtw
  http:
  - route:
    - destination:
        port:
          number: 80
        host: nginx.default.svc.cluster.local
